2009-07-21  Scott James Remnant  <scott@netsplit.com>

	* init/job.c (job_change_state): Obvious bug fix; the set of states
	into which we can enter JOB_STOPPING includes JOB_STARTING because
	we can get the "stop" event or command there.

2009-07-16  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.6.2
	* NEWS: Begin new release

	* NEWS: Release 0.6.1

	* util/runlevel.c: Output the path before the error message,
	to make it clear that it's the utmp file missing not runlevel.

	* util/runlevel.c: If there is no current runlevel because the
	environment variable is empty, output "unknown" instead of "N N".

2009-07-15  Scott James Remnant  <scott@netsplit.com>

	* README: Now that D-Bus 1.2.16 proper has been released, update
	our requirements.

2009-07-14  Scott James Remnant  <scott@netsplit.com>

	* TODO: Update

	* init/tests/test_job_process.c (test_handler): Rework the existing
	ptrace fork handler test case to make sure we test the case where
	we get the fork event before the stopped child.  Add a second test
	case for the opposite (stopped child before the fork event) which
	we don't currently handle.
	* init/job_process.c (job_process_trace_fork): Test for the missed
	child event using ptrace(), if it succeeds the child is ready so
	we can just assume we had the event.

	* util/Makefile.am (EXTRA_DIST): Distribute the valgrind suppressions
	file

	* util/tests/test_utmp.c (test_write_shutdown): Additional instance
	of the same test.

	* util/tests/test_utmp.c (test_write_runlevel): Looks like glibc
	is fixed to return the right error code.

2009-07-11  Scott James Remnant  <scott@netsplit.com>

	* init/control.c (control_server_open): Don't hardcode the server
	address, otherwise the test suite can't test this function.
	* init/tests/test_control.c (test_server_open)
	(test_server_connect, test_server_close): Change the server
	address in the tests.

	* configure.ac: Bump version to 0.6.1
	* NEWS: Begin new release
