@@ -1440,14 +1440,21 @@ job_process_trace_exec (Job         *job,
 	nih_info (_("%s %s process (%d) executable changed"),
 		  job_name (job), process_name (process), job->pid[process]);
 
-	if (ptrace (PTRACE_DETACH, job->pid[process], NULL, 0) < 0)
-		nih_warn (_("Failed to detach traced "
-			    "%s %s process (%d): %s"),
-			  job_name (job), process_name (process),
-			  job->pid[process], strerror (errno));
+	if (job->trace_forks) {
+		if (ptrace (PTRACE_DETACH, job->pid[process], NULL, 0) < 0)
+			nih_warn (_("Failed to detach traced "
+				    "%s %s process (%d): %s"),
+				  job_name (job), process_name (process),
+				  job->pid[process], strerror (errno));
 
-	job->trace_state = TRACE_NONE;
-	job_change_state (job, job_next_state (job));
+		job->trace_state = TRACE_NONE;
+		job_change_state (job, job_next_state (job));
+	} else {
+		if (ptrace (PTRACE_CONT, job->pid[process], NULL, 0) < 0)
+			nih_warn (_("Failed to continue traced %s %s process (%d): %s"),
+				  job_name (job), process_name (process),
+				  job->pid[process], strerror (errno));
+	}
 }
 
 
