@@ -3,6 +3,10 @@
 	* Fixed an assertion when a job receives a stop event or the
 	  stop command while still in the starting state.
 
+	* Changed exec() trace handling to allow the main process to
+	  exec another before fork()ing while still following (e.g.
+	  main script exec'ing a daemon)
+
 0.6.1  2009-07-16  "Born in the wagon of a travelling show"
 
 	* D-Bus 1.2.16 is now required.
